test/Fail/Polarity-pragma-for-defined-name.agda
{-# OPTIONS --warning=error #-}

A : Set₁
A = Set

{-# POLARITY A #-}
